--- a/lab8/Homework/lab8_hw.Rmd
+++ b/lab8/Homework/lab8_hw.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 8 Homework"
-author: "Please Add Your Name Here"
+author: "Rafael Vasquez-Chan"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -21,6 +21,7 @@ Make sure to use the formatting conventions of RMarkdown to make your report nea
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(janitor)
+library(here)
 ``` 
 
 ## Install `here`
@@ -36,6 +37,8 @@ This homework loosely follows the tutorial of [R Ladies Sydney](https://rladiess
 
 1. Start by loading the data `sydneybeaches`. Do some exploratory analysis to get an idea of the data structure.
 ```{r}
+sydneybeaches <-read_csv(here("lab8", "data", "sydneybeaches.csv")) %>% janitor::clean_names()
+glimpse(sydneybeaches)
 
 ```
 
@@ -51,27 +54,67 @@ sydneybeaches <-read_csv(here("lab8", "data", "sydneybeaches.csv")) %>% janitor:
 
 2. Are these data "tidy" per the definitions of the tidyverse? How do you know? Are they in wide or long format?
 
+No they are not, sites and dates can be separated into their own variables.
 
 3. We are only interested in the variables site, date, and enterococci_cfu_100ml. Make a new object focused on these variables only. Name the object `sydneybeaches_long`
+```{r}
+sydneybeaches_long <- sydneybeaches %>% 
+  select(site, date,enterococci_cfu_100ml)
+sydneybeaches_long
+```
 
 
 4. Pivot the data such that the dates are column names and each beach only appears once. Name the object `sydneybeaches_wide`
+```{r}
+sydneybeaches_wide <- sydneybeaches %>% 
+  pivot_wider(names_from = date,
+              values_from = enterococci_cfu_100ml)
+sydneybeaches_wide
+```
 
 
 5. Pivot the data back so that the dates are data and not column names.
+```{r}
+sydneybeaches_wide %>% 
+  pivot_longer(-c(beach_id, region, council, site, longitude, latitude),
+               names_to = "date",
+               values_to = "enterococci_cfu_100ml")
+```
 
 
 6. We haven't dealt much with dates yet, but separate the date into columns day, month, and year. Do this on the `sydneybeaches_long` data.
+```{r}
+sydneybeaches_long_separated <- sydneybeaches_long %>% 
+  separate(date, into = c("day", "month", "year"), sep = "/")
+sydneybeaches_long_separated
+
+```
 
 
 7. What is the average `enterococci_cfu_100ml` by year for each beach. Think about which data you will use- long or wide.
+```{r}
+avg_enterococci_cfu_100ml_per_beach_per_year <- sydneybeaches_long_separated %>% 
+  group_by(year, site) %>% 
+  summarise(avg_enterococci_cfu_100ml = mean(enterococci_cfu_100ml, na.rm = T))
+avg_enterococci_cfu_100ml_per_beach_per_year
+```
 
 
 8. Make the output from question 7 easier to read by pivoting it to wide format.
+```{r}
+avg_enterococci_cfu_100ml_per_beach_per_year %>% 
+  pivot_wider(names_from = year,
+              values_from = avg_enterococci_cfu_100ml)
+```
 
 
 9. What was the most polluted beach in 2018?
+```{r}
+avg_enterococci_cfu_100ml_per_beach_per_year %>% 
+  filter(year == "2018") %>% 
+  arrange(desc(avg_enterococci_cfu_100ml))
 
+```
 
 10. Please complete the class project survey at: [BIS 15L Group Project](https://forms.gle/H2j69Z3ZtbLH3efW6)
 
