--- a/lab10/lab10_hw.Rmd
+++ b/lab10/lab10_hw.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 10 Homework"
-author: "Please Add Your Name Here"
+author: "Rafael Vasquez-Chan"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -32,24 +32,121 @@ deserts <- read_csv(here("lab10", "data", "surveys_complete.csv"))
 ```
 
 1. Use the function(s) of your choice to get an idea of its structure, including how NA's are treated. Are the data tidy?  
+```{r}
+glimpse(deserts)
+```
+```{r}
+summary(deserts)
+```
+```{r}
+miss_var_summary(deserts)
+```
 
 2. How many genera and species are represented in the data? What are the total number of observations? Which species is most/ least frequently sampled in the study?
+```{r}
+deserts %>% 
+  summarize(number_of_species =n_distinct(species))
+```
+```{r}
+deserts %>% 
+  summarize(number_of_genera=n_distinct(genus))
+```
+```{r}
+deserts %>% 
+  count(species, sort = T)
+```
+
+```{r}
+deserts %>% 
+  count(species, sort = T) %>% 
+  summarize(total_observations = sum(n))
+```
 
 3. What is the proportion of taxa included in this study? Show a table and plot that reflects this count.
+```{r}
+deserts %>% 
+  tabyl(taxa)
+```
+```{r}
+deserts %>% 
+  tabyl(taxa) %>% 
+  ggplot(aes(x=taxa, y=percent))+
+  geom_col()
+```
 
 4. For the taxa included in the study, use the fill option to show the proportion of individuals sampled by `plot_type.`
+```{r}
+deserts %>% 
+  ggplot(aes(x=taxa, fill=plot_type))+
+  geom_bar()+
+  scale_y_log10()
+```
 
 5. What is the range of weight for each species included in the study? Remove any observations of weight that are NA so they do not show up in the plot.
+```{r}
+deserts %>% 
+  ggplot(aes(x=species, y=weight))+
+  geom_boxplot(na.rm = T)+
+  coord_flip()
+```
 
-6. Add another layer to your answer from #4 using `geom_point` to get an idea of how many measurements were taken for each species.
+6. Add another layer to your answer from #5 using `geom_point` to get an idea of how many measurements were taken for each species.
+```{r}
+deserts %>% 
+  ggplot(aes(x=species, y=weight))+
+  geom_boxplot(na.rm = T)+
+  coord_flip()+
+  geom_point()
+```
+
 
 7. [Dipodomys merriami](https://en.wikipedia.org/wiki/Merriam's_kangaroo_rat) is the most frequently sampled animal in the study. How have the number of observations of this species changed over the years included in the study?
+```{r}
+deserts %>% 
+  filter(species == "merriami") %>% 
+  ggplot(aes(x=year))+geom_bar()
+```
 
 8. What is the relationship between `weight` and `hindfoot` length? Consider whether or not over plotting is an issue.
+```{r}
+deserts %>% 
+  ggplot(aes(x=weight, y=hindfoot_length))+
+  geom_jitter(na.rm = T)+
+  scale_x_log10()+
+     geom_smooth(method=lm, se=T)
+```
 
 9. Which two species have, on average, the highest weight? Once you have identified them, make a new column that is a ratio of `weight` to `hindfoot_length`. Make a plot that shows the range of this new ratio and fill by sex.
+```{r}
+deserts %>% 
+  filter(weight !="NA") %>% 
+  group_by(species) %>% 
+  summarize(avg_weight=mean(weight)) %>% 
+  arrange(desc(avg_weight))
+```
+```{r}
+deserts_with_ratio <- deserts %>% 
+  filter(species == "albigula"|species == "spectabilis") %>% 
+  filter(weight != "NA") %>%
+  filter(hindfoot_length != "NA") %>% 
+  mutate(weight_hindfoot_ratio = weight/hindfoot_length)
+```
+
+```{r}
+deserts_with_ratio %>% 
+  ggplot(aes(x=species, y=weight_hindfoot_ratio, fill = sex)) + 
+  geom_boxplot()
+```
 
 10. Make one plot of your choice! Make sure to include at least two of the aesthetics options you have learned.
+```{r}
+#what ratio of each species observed is male vs female
+deserts %>% 
+  ggplot(aes(x=species, fill=sex)) +
+  geom_bar()+
+  scale_y_log10()+
+   theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
