--- a/lab11/lab11_2.Rmd
+++ b/lab11/lab11_2.Rmd
@@ -42,7 +42,7 @@ options(scipen=999) #cancels the use of scientific notation for the session
 For this tutorial, we will use:  
 [Homerange](http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1). The data are from: Tamburello N, Cote IM, Dulvy NK (2015) Energy and the scaling of animal space use. The American Naturalist 186(2):196-211. http://dx.doi.org/10.1086/682070.  
 ```{r message=FALSE, warning=FALSE}
-homerange <- read_csv(here("lab11", "data", "Tamburelloetal_HomeRangeDatabase.csv"))
+homerange <- read_csv(here("data", "Tamburelloetal_HomeRangeDatabase.csv"))
 ```
 
 ## ggplot themes
@@ -55,7 +55,8 @@ p
 ```
 
 ```{r}
-p+theme_classic()+
+p+
+  theme_linedraw()+
   theme(axis.text.x = element_text(angle = 60, hjust=1))+
   labs(title = "Observations by Taxon in Homerange Data",
        x = NULL,
@@ -87,7 +88,7 @@ ls("package:ggthemes")[grepl("theme_", ls("package:ggthemes"))]
 ```
 
 ```{r}
-p+ theme_igray()+
+p+ theme_fivethirtyeight()+
   theme(legend.position = "bottom",
         axis.text.x = element_text(angle = 60, hjust=1))+
   labs(title = "Observations by Taxon in Homerange Data",
@@ -106,7 +107,7 @@ Access the help for `RColorBrewer`.
 
 The thing to notice is that there are three different palettes: 1) sequential, 2) diverging, and 3) qualitative. Within each of these there are several selections. You can bring up the colors by using `display.brewer.pal()`. Specify the number of colors that you want and the palette name.
 ```{r}
-display.brewer.pal(4,"GnBu")
+display.brewer.pal(4,"Paired")
 ```
 
 The [R Color Brewer](http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3) website is very helpful for getting an idea of the color palettes. To make things easy, use these two guidelines:
@@ -116,7 +117,7 @@ The [R Color Brewer](http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3) w
 
 Here I chose the `Paired` palette. Take a moment and experiment with other options.
 ```{r}
-p+scale_fill_brewer(palette = "BuPu")+
+p+scale_fill_brewer(palette = "Paired")+
   theme(legend.position = "bottom",
         axis.text.x = element_text(angle = 60, hjust=1))+
   labs(title = "Observations by Taxon in Homerange Data",
@@ -129,11 +130,13 @@ p+scale_fill_brewer(palette = "BuPu")+
 You can also use `paleteer` to build a custom palette for consistency. To access the `paleteer` collection, I add it to a new object.
 ```{r}
 colors <- paletteer::palettes_d_names
+colors
 ```
 
 Now we can display the palettes. Assign the palette to `my_palette` and then build this base R bar plot. There are a lot of options; `paleteer` is a collection of popular palettes. I really like the [`ggsci` package] (https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html)
 ```{r}
-my_palette <- paletteer_d("ggprism::flames")
+my_palette <- paletteer_d("beyonce::X1")
+
 ```
 
 ```{r}
@@ -157,14 +160,19 @@ There are many options for adjusting the x and y axes. For details, look over ex
 homerange %>% 
   ggplot(aes(x = log10.mass, y = log10.hra, color = locomotion)) +
   geom_point() +
-  xlim(0, 4) +
-  ylim(1, 6)
+  xlim(1, 4) +
+  ylim(0, 5)
 ```
 
 ## Practice
 1. Revisit the relationship between mass and homerange using a scatterplot, but color the points by taxonomic class using a custom color theme.
 ```{r}
+my_palette2 <- paletteer_d("fishualize::Petromyzon_marinus")
 
+homerange %>% 
+  ggplot(aes(x=log10.mass, y = log10.hra, ))+ 
+  geom_point()+
+  scale_colour_brewer(values = my_palette2)
 ```
 
 2. Build bar plots that show the representation by taxonomic class with carnivores and herbivores. Try using a color theme that matches your scatterplot to keep everything consistent.
@@ -210,7 +218,7 @@ The problem is that the plot becomes very busy. It is hard to interpret with eac
 ecosphere %>% 
   ggplot(aes(x=diet, y=log10_mass, fill=migratory_strategy))+ 
   geom_boxplot(alpha=0.4) + 
-  facet_wrap(~migratory_strategy, ncol=4)+
+  facet_wrap(~migratory_strategy, ncol=3)+
   theme(axis.text.x = element_text(angle = 60, hjust = 1))+
   labs(title = "Mass by Diet and Migratory Strategy",
        x = NULL,
@@ -244,18 +252,6 @@ ecosphere %>%
        fill = "Migratory Strategy")
 ```
 
-```{r}
-ecosphere %>% 
-  ggplot(aes(x=diet, y=log10_mass, fill=migratory_strategy))+ 
-  geom_boxplot(alpha=0.4)+ 
-  facet_grid(migratory_strategy~.)+
-  theme(axis.text.x = element_text(angle = 60, hjust = 1))+
-  labs(title = "Mass by Diet and Migratory Strategy",
-       x = NULL,
-       y = "Log 10 Mass",
-       fill = "Migratory Strategy")
-```
-
 `facet_grid()` will also allow the comparison of two categorical variables, just remember a~b where a is rows and b is columns.  
 ```{r}
 ecosphere %>% 
@@ -265,14 +261,22 @@ ecosphere %>%
 ```
 
 ## Practice
-1. Build a faceted plot that shows a distribution of life expectancy by habitat type.
+1. Build a faceted plot that shows a distribution of log mass by habitat type.
 ```{r}
+ecosphere %>% 
+  ggplot(aes(x=log10_mass))+ 
+  geom_density()+
+  facet_wrap(~habitat)
+  
 
 ```
 
 2. Try the same plot as #1 above, but include life_expectancy~habitat.
 ```{r}
-
+ecosphere %>% 
+  ggplot(aes(x=log10_mass))+ 
+  geom_density()+
+  facet_grid(~life_expectancy~habitat) #always rows then columns
 ```
 
 ## That's it, let's take a break!   
