--- a/midterm 2/midterm_2.Rmd
+++ b/midterm 2/midterm_2.Rmd
@@ -134,22 +134,55 @@ surgery %>%
 
 9. (4 points) When is the best month to have surgery? Make a chart that shows the 30-day mortality and complications for the patients by month. `mort30` is the variable that shows whether or not a patient survived 30 days post-operation.
 ```{r}
-surgery %>% 
-  group_by(month) %>% 
-  summarize(avg_mort30rate = mean(ccsmort30rate),
-            avg_ccscomplicationrate = mean(ccscomplicationrate)) %>% 
-  arrange(desc(avg_mort30rate))
+surgery$mort30<-ifelse(surgery$mort30=="Yes",1,0)
+surgery
+
+surgery$complication<-ifelse(surgery$complication=="Yes",1,0)
+surgery
 ```
 
-10. (4 points) Make a plot that visualizes the chart from question #9. Make sure that the months are on the x-axis. Do a search online and figure out how to order the months Jan-Dec.
+
 ```{r}
 surgery %>% 
   group_by(month) %>% 
-  summarize(avg_mort30rate = mean(ccsmort30rate),
-            avg_ccscomplicationrate = mean(ccscomplicationrate)) %>% 
-  ggplot(aes())
+  summarize(numberofmort = sum(mort30),
+            numberofcolmplication = sum(complication))
+```
+
+10. (4 points) Make a plot that visualizes the chart from question #9. Make sure that the months are on the x-axis. Do a search online and figure out how to order the months Jan-Dec.
+
+
+```{r}
+surgery %>% 
+ group_by(month) %>% 
+  summarize(numberofmort = sum(mort30),
+            numberofcolmplication = sum(complication)) %>% 
+  ggplot(aes(x=month, y=numberofmort))+
+  geom_col()+
+  scale_x_discrete(limits = month.abb)+
+   labs(title = "Number of Mortalities per Month", 
+       x="Month",
+       y="Number of Mortalities")
+  
+
+```
+
+```{r}
+surgery %>% 
+ group_by(month) %>% 
+  summarize(numberofmort = sum(mort30),
+            numberofcolmplication = sum(complication)) %>% 
+  ggplot(aes(x=month, y=numberofcolmplication))+
+  geom_col()+
+  scale_x_discrete(limits = month.abb)+
+     labs(title = "Number of Complications per Month", 
+       x="Month",
+       y="Number of Complications")
 ```
 
 Please provide the names of the students you have worked with with during the exam:
+
+Shefali Shuresh
+Ingrid Jimenez-Ledesma
 
 Please be 100% sure your exam is saved, knitted, and pushed to your github repository. No need to submit a link on canvas, we will find your exam in your repository.
